static/style.css
@font-face {
	font-family: "PokemonGB";
	src: url("/fonts/PokemonGB.eot") format("eot");
	src: url("/fonts/PokemonGB.ttf") format("truetype"), 
	url("/fonts/PokemonGB.woff") format("woff"), 
	url("/fonts/PokemonGB.woff2") format("woff2"); 
	font-weight: normal;
	font-style: normal;
}
@font-face {
	font-family: "Open Sans";
	src: url("/fonts/OpenSans-Regular.woff2?v=1.101") format("woff2"), 
	     url("/fonts/OpenSans-Regular.woff?v=1.101") format("woff"),
	     url("/fonts/OpenSans-Regular.eot?v=1.101") format("eot");
	font-weight: normal;
	font-style: normal;
}

::-webkit-scrollbar-track, ::-webkit-scrollbar, ::-webkit-scrollbar-thumb {
	border: 4px solid #f9f9f9;
}

::-webkit-scrollbar-track {
	background-color: #f9f9f9;
}

::-webkit-scrollbar, ::-webkit-scrollbar-thumb {
	background-color: #DDD;
}
#chat::-webkit-scrollbar { width: 0 !important }

html, body, header, main, footer, div, i, ul, li, select, input {
	transition: background-color 200ms linear;
	box-sizing: border-box;
	padding: 0;
	margin: 0;
}

input, select, option {
	font-family: inherit;
	font-weight: inherit;
}

i {
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

html, body, header, main, footer {
	display: -webkit-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-box-flex: 1;
	-webkit-flex: 1;
	-ms-flex: 1;
	flex: 1;
}
 
html, body {
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	font-family: Verdana, 'DejaVu Sans', 'Bitstream Vera Sans', Geneva, sans-serif;
	font-size: 15px;
	background: #f9f9f9;
	max-height: 100%;
	height: 100%;
	width: 100%;
	color: #333;
}

header, footer {
	max-height: 50px;
	height: 50px;
	z-index: 25;
}

header, #window > div:first-child {
	background: linear-gradient(to bottom, #EEE 0%, #FFF 100%);
}

header {
	padding-right: 200px;
}

header > div {
	width: 182px;
	height: 75px;
	margin: 5px auto 0;
	background: url("/img/logo_in.svg") no-repeat;
	background-size: 182px 75px !important;
}

header > div > img {
	opacity: 0;
	width: 182px;
	height: 75px;
	-webkit-animation: 2s ease-out 10s 1 forwards running opacityin;
	animation: 2s ease-out 10s 1 forwards running opacityin;
}

@-webkit-keyframes opacityin {
	0% { opacity: 0; }
	100% { opacity: 1; }
}
@keyframes opacityin {
	0% { opacity: 0; }
	100% { opacity: 1; }
}

footer {
	background: linear-gradient(to bottom, #FFF 0%, #EEE 100%);
}

#gear:hover > img:first-of-type {
	display: none;
}

footer > div {
	height: 100%;
	width: 200px;
	border-left: 2px solid #BBB;
	display: -webkit-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-ms-flex-direction: row;
	flex-direction: row;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	justify-content: space-between;
}

footer > div > i {
	-webkit-box-flex: 1;
	-webkit-flex: 1;
	-ms-flex: 1;
	flex: 1;
	text-align: center;
	padding: 13px 10px;
}

footer > div > i:not(:first-child) {
	border-left: 2px solid #BBB;
}

footer > div > i:hover {
	background: #EEE;
}

main {
	z-index: 20;
	min-width: 0;
	min-height: 0;
	height: 100%;
	border-top: 2px solid #BBB;
	border-bottom: 2px solid #BBB;
	display: -webkit-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
}

#input {
	-webkit-box-flex: 1;
	-webkit-flex: 1;
	-ms-flex: 1;
	flex: 1;
	height: 50px ;
	font-size: 30px;
	padding: 5px 10px;
	outline: 0;
	border: 0;
	min-width: 0;
	background: #f9f9f9;
}

#chat {
	-webkit-box-flex: 1;
	-webkit-flex: 1;
	-ms-flex: 1;
	flex: 1;
	overflow-y: scroll;
	z-index: 20;
}

#chat > div {
	display: -webkit-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-ms-flex-direction: row;
	flex-direction: row;
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	justify-content: space-between;
	padding: 5px 0;
	position: relative;
}

#chat > div > :not(:nth-child(2)) {
	white-space: nowrap;
	width: 70px;
}

#chat > div > div:last-child {
	font-family: monospace;
	padding-right: 5px;
	text-align: right;
	line-height: 24px;
	font-size: 11px;
}

#chat > div > :first-child {
	margin: 0 10px;
	text-align: center;
}

#chat > div > div:first-child {
	background-color: #DDD;
	border-radius: 99px;
	position: relative;
	overflow: hidden;
	height: 70px;
	border-right: 2px solid rgba(0, 0, 0, 0.5);
	border-bottom: 2px solid rgba(0, 0, 0, 0.5);	
}

#chat > div > div:first-child > img {
	position: absolute;
	margin: auto;
	display: none;
}

#chat > div > div:first-child > img:nth-child(1) {
	top: auto;
	left: 4px;
	right: auto;
	bottom: 6px;
}

#chat > div > div:first-child > img:not(:first-child), ul > li > div > div:first-child > div > img {
	top: -100%;
	left: -100%;
	right: -100%;
	bottom: -100%;
}

#chat > div > :nth-child(2) {
	-webkit-box-flex: 1;
	-webkit-flex: 1;
	-ms-flex: 1;
	flex: 1;
	overflow: hidden;
	word-break: keep-all;
}

#chat > div > div > div {
	padding: 5px;
}

#chat > div > :nth-child(2) > div:not(:first-child) {
	color: #333;
}

#chat > .msg > :nth-child(3) {
	color: #999;
}

ul {
	width: 200px;
	height: 100%;
	border-left: 2px solid #BBB;
	overflow-x: hidden;
	overflow-y: scroll;
	background: #f9f9f9;
}

ul > li {
	background-position: left 4px bottom 6px;
	background-repeat: no-repeat;
	padding-left: 40px;
	line-height: 36px;
	width: 180px;
	height: 36px;
	display: -webkit-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-ms-flex-pack: justify;
	justify-content: space-between;
	cursor: pointer;
}

ul > li > i {
	margin: 1px 0;
	padding: 6px 5px;
	color: #333;
}

a {
	color: #06A;
	text-decoration: none;
}

audio + a {
	margin-left: 5px;
}

a:hover, li > i:hover, footer i:hover, #window input:hover, #window label:hover, select:hover {
	cursor: pointer;
}
/* ... */

